set(MOVEIT_LIB_NAME moveit_planning_pipeline)

add_library(${MOVEIT_LIB_NAME} src/planning_pipeline.cpp)
set_target_properties(${MOVEIT_LIB_NAME} PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
target_link_libraries(${MOVEIT_LIB_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})

if(WIN32)
    install(TARGETS ${MOVEIT_LIB_NAME} 
        RUNTIME DESTINATION ${CATKIN_GLOBAL_LIB_DESTINATION}
        CONFIGURATIONS ${CMAKE_BUILD_TYPE}
        ARCHIVE DESTINATION ${CATKIN_GLOBAL_LIB_DESTINATION}
        LIBRARY DESTINATION ${CATKIN_GLOBAL_LIB_DESTINATION})
else()
    install(TARGETS ${MOVEIT_LIB_NAME} LIBRARY DESTINATION ${CATKIN_GLOBAL_LIB_DESTINATION})
endif()
install(DIRECTORY include/ DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION})
